# sanic-clean-architecture-app-template

./: README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_name}}/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  asgi.py  compose.yaml  entrypoint.sh  pyproject.toml
{{cookiecutter.project_name}}/src/api/: __init__.py  items.py  numbers.py
{{cookiecutter.project_name}}/src/data/: base.py
{{cookiecutter.project_name}}/src/data/authn/: idp.py
{{cookiecutter.project_name}}/src/data/items/: __init__.py  dto.py  repository.py
{{cookiecutter.project_name}}/src/domain/use_cases/: base.py
{{cookiecutter.project_name}}/src/domain/use_cases/items/: __init__.py  create_item.py  delete_item.py  get_item.py  update_item.py
{{cookiecutter.project_name}}/src/domain/use_cases/numbers/: __init__.py  divide.py  multiply.py  subtract.py  summarise.py
{{cookiecutter.project_name}}/src/infrastructure/clients/: cache_client.py  kafka.py  telemetry.py
{{cookiecutter.project_name}}/src/infrastructure/clients/http_client/: base.py  client.py
{{cookiecutter.project_name}}/src/infrastructure/clients/postgres/: engine.py  utils.py
{{cookiecutter.project_name}}/src/infrastructure/clients/postgres/migrations/: env.py
{{cookiecutter.project_name}}/src/infrastructure/clients/postgres/migrations/versions/: 0001_create_items_table.py
{{cookiecutter.project_name}}/src/infrastructure/clients/postgres/models/: __init__.py  items.py
{{cookiecutter.project_name}}/src/infrastructure/core/: application.py  constants.py  log_config.py  settings.py  telemetry.py
{{cookiecutter.project_name}}/src/infrastructure/core/errors/: constants.py  error_handling.py  exceptions.py
{{cookiecutter.project_name}}/src/infrastructure/core/interceptors/: authn.py  validation.py
{{cookiecutter.project_name}}/src/infrastructure/core/middlewares/: correlation_id.py  error_handling.py  log_requests.py
{{cookiecutter.project_name}}/tests/: conftest.py  test_items.py  test_numbers.py  utils.py
{{cookiecutter.project_name}}/tests/data/: data.py  expected_data.py  mock_data.py
{{cookiecutter.project_name}}/tests/fixtures/: items.py
