[project]
name = "sddfvwefve"
version = "1.0.0"
description = "ertbwea ertbwevfdasx weqrverg e wr eqw w w 24tb24r 3r trgh r wervwe brbr w4rtbevafsd"
authors = [
    { name = "wertvvfdasc etyybgrvfsdc", email = "author@mail.dev" }
]
license = { text = "My Private License" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sanic",
    "sanic-ext",
    "sanic-prometheus",
    "granian[reload, pname]",
    "msgspec",
    "python-dotenv",
    "pyjwt[crypto]",
    "asyncpg",
    "sqlalchemy[asyncio]",
    "alembic",
    "python-json-logger",
    "sentry-sdk[sanic]",
    "redis[hiredis]",
    "aiokafka",
    "httpx",
    "opentelemetry-distro",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
    "opentelemetry-instrumentation",
    "opentelemetry-instrumentation-asgi",
    "opentelemetry-instrumentation-sqlalchemy",
    "opentelemetry-instrumentation-redis",
    "opentelemetry-instrumentation-aiokafka",
    "opentelemetry-instrumentation-httpx",
    "sanic-prometheus-mon (>=0.3.9,<0.4.0)",
]

[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-mock",
    "pytest-xdist",
    "pytest-cov",
    "pre-commit",
]

[build-system]
requires = ['setuptools>=68.0.0', 'Cython>=3.0.0']
build-backend = 'setuptools.build_meta'

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true

[tool.ruff]
src = ["src"]
target-version = "py313"
line-length = 120
fix = true
unsafe-fixes = true
show-fixes = true
output-format = "grouped"

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "ANN", # flake8-annotations
    "Q", # flake8-quotes
    "SIM", # flake8-simplify
    "T", # flake8-type-checking
    "B", # flake8-bandit
    "C", # flake8-copyright
    "UP", # pyupgrade
]
ignore = [
    "ANN101", # Checks that instance method self arguments have type annotations
    "ANN102", #
    "D203", # one blank line before class, handled by pydocstyle
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
    "W191", # indentation contains tabs
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.flake8-type-checking]
exempt-modules = ["typing", "typing_extensions"]

[tool.ruff.lint.flake8-bandit]
check-typed-exception = true

[tool.ruff.lint.isort]
length-sort = true
combine-as-imports = true
order-by-type = true
force-sort-within-sections = true
split-on-trailing-comma = false
known-first-party = ["src"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
indent-style = "space"
skip-magic-trailing-comma = true
docstring-code-format = true
docstring-code-line-length = 80

[tool.pytest.ini_options]
minversion = "8.3"
testpaths = "tests"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]
data_file = "tests/coverage/.coverage"

[tool.coverage.report]
show_missing = true
skip_covered = true
omit = ["tests/*"]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "def logger",
    "def build_spec.*:",
    "except ConnectionRefusedError",
]
